--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     build_latex:
         runs-on: ubuntu-latest
         container:
-            image: danteev/texlive:2021-B
+            image: danteev/texlive:2021-10-15
         steps:
             - name: Checkout
               uses: actions/checkout@v2
